--- a/src/app/components/parts/chart/chart.component.html
+++ b/src/app/components/parts/chart/chart.component.html
@@ -1,48 +1,31 @@
-<!-- Sidebar: Preview continuous mappings (non-color) -->
-<div *ngIf="chartObject && chartObject.chartType.line">
-  <h5 *ngIf="includeHeadline">
-    <a [routerLink]="['', { outlets: {primary: ['mappings', index]} }]" role="button">
-      <b>{{mapping.cleanStyleProperty || mapping.styleProperty}}</b>
-      {{'SIDEBAR_EDIT_MAPPED_BY' | translate}}
-      <b>{{mapping.col}}</b>
-    </a>
-  </h5>
-  <canvas [chartType]="'line'"
-          [colors]="chartObject.chartColors" [datasets]="chartObject.chartData"
-          [labels]="chartObject.chartLabels"
-          [legend]="true"
-          [ngStyle]="{'width.%': widthPercent}"
-          [options]="chartObject.chartOptions"
-          baseChart></canvas>
-</div>
-
-<!-- Create new / Edit existing continuous mappings: Distribution charts -->
-<div *ngIf="chartObject && chartObject.chartType.bar">
-  <canvas [chartType]="'bar'"
+<div *ngIf="chartObject">
+  <canvas [chartType]="chartObject.chartType.bar ? 'bar' : 'line'"
           [colors]="chartObject.chartColors"
           [datasets]="chartObject.chartData"
           [labels]="chartObject.chartLabels"
-          [ngStyle]="{'width.%': widthPercent}"
-          [options]="chartObject.chartOptions || {}"
-          baseChart></canvas>
-
-  <!-- Allow manipulation of bins for continuous mappings -->
-  <div *ngIf="numberOfBins" class="row mt-2 mb-2 p-2">
-    <button (click)="setNumberOfBins(numberOfBins - 1)" class="col mr-2 btn btn-sm btn-outline-danger"
-            data-toggle="tooltip" ngbTooltip="{{'CHART_HISTO_DECREASE' | translate}}"
-            placement="bottom">
-      <fa-icon [icon]="faMinus"></fa-icon>
-    </button>
-    <button (click)="setNumberOfBins(numberOfBins + 1)" class="col mr-2 btn btn-sm btn-outline-success"
-            data-toggle="tooltip" ngbTooltip="{{'CHART_HISTO_INCREASE' | translate}}"
-            placement="bottom">
-      <fa-icon [icon]="faPlus"></fa-icon>
-    </button>
-    <button (click)="setNumberOfBins(binSizeInitially)" class="col btn btn-sm btn-outline-warning" data-toggle="tooltip"
-            ngbTooltip="{{'CHART_HISTO_RESET' | translate}} {{binSizeInitially}}"
-            placement="bottom">
-      <fa-icon [icon]="faUndo"></fa-icon>
-    </button>
-  </div>
-  <hr>
+          [legend]="true"
+          [options]="chartObject.chartOptions"
+          baseChart>
+  </canvas>
 </div>
+
+<div *ngIf="numberOfBins" class="row mt-2 mb-2 p-2">
+  <button (click)="setNumberOfBins(numberOfBins - 1)" class="col mr-2 btn btn-sm btn-outline-danger"
+          data-toggle="tooltip" ngbTooltip="{{'CHART_HISTO_DECREASE' | translate}}"
+          placement="bottom">
+    <fa-icon [icon]="faMinus"></fa-icon>
+  </button>
+  <button (click)="setNumberOfBins(numberOfBins + 1)" class="col mr-2 btn btn-sm btn-outline-success"
+          data-toggle="tooltip" ngbTooltip="{{'CHART_HISTO_INCREASE' | translate}}"
+          placement="bottom">
+    <fa-icon [icon]="faPlus"></fa-icon>
+  </button>
+  <button (click)="setNumberOfBins(binSizeInitially, true)" class="col btn btn-sm btn-outline-warning"
+          data-toggle="tooltip"
+          ngbTooltip="{{'CHART_HISTO_RESET' | translate}} {{binSizeInitially}}"
+          placement="bottom">
+    <fa-icon [icon]="faUndo"></fa-icon>
+  </button>
+</div>
+
+
